tests/ui/error-codes/E0013.stderr
error[E0013]: constants cannot refer to statics
  --> $DIR/E0013.rs:2:16
   |
LL | const Y: i32 = X;
   |                ^
   |
   = help: consider extracting the value of the `static` to a `const`, and referring to that

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0013`.
